k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go_web_app
  labels:
    app: go_web_app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go_web_app
  template:
    metadata:
      labels:
        app: go_web_app
    spec:
      containers:
      - name: go_web_app
        image: hemant19bagul/go_web_app:v1
        ports:
        - containerPort: 8080
