k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go_web_app
  labels:
    app: go_web_app
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: go_web_app
  type: ClusterIP
