k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go_web_app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClaaName: nginx
  rules:
  - host: go_web_app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go_web_app
            port:
              number: 80
